# discourse

./: package.json
.github/workflows/: release-desktop.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/public/: index.html
src-tauri/public/dev/: index.html
src-tauri/src/: main.rs  menu.rs
