[package]
name = "discourse"
version = "0.1.0"
description = "The Discourse desktop application"
authors = ["Discourse"]
license = ""
repository = "https://github.com/discourse/discourse"
default-run = "discourse"
edition = "2018"

[build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri/", branch = "next" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { git = "https://github.com/tauri-apps/tauri/", branch = "next", features = ["notification-all", "system-tray"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
